DANZ-179 fix: 어드민 JWT 필터 ROLE_ADMIN 권한 누락 수정
- JwtAuthenticationFilter에서 authentication 생성 시 emptyList() 사용으로
  ROLE_ADMIN 권한이 Security Context에 등록되지 않아 /api/admin/** 403 오류 발생
- Collections.emptyList() → List.of(new SimpleGrantedAuthority("ROLE_ADMIN")) 로 수정